[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = {version = "0.2.91", features = ["serde-serialize"] }
lib-simulation = { path = "../simulation" }
getrandom = { version = "0.2.12", features = ["js"] }
serde = { version = "1.0.196", features = ["derive"] }
